--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,1 +1,6 @@
-@import "../bower_components/bootstrap-sass/assets/stylesheets/_bootstrap.scss"
+@import "../bower_components/bootstrap-sass/assets/stylesheets/_bootstrap.scss";
+
+.main {
+  position: relative;
+  margin-top: 100px;
+}
