--- a/scss/main.scss
+++ b/scss/main.scss
@@ -4,3 +4,13 @@
   position: relative;
   margin-top: 100px;
 }
+
+.search-row {
+  background-color: #CEECF5;
+  padding: 15px;
+}
+
+.content-row {
+  background-color: #F7F8E0;
+  padding: 15px;
+}
