Lots of changes, modal, comparison, still mocking up reg/ipfs lookup

--- a/css/main.css
+++ b/css/main.css
@@ -6070,3 +6070,9 @@ button.close {
 .content-row {
   background-color: #F7F8E0;
   padding: 15px; }
+
+#solidityContent, #byteCodeContent {
+  min-height: 400px; }
+
+.modal-center {
+  text-align: center; }
