--- a/scss/main.scss
+++ b/scss/main.scss
@@ -14,3 +14,11 @@
   background-color: #F7F8E0;
   padding: 15px;
 }
+
+#solidityContent, #byteCodeContent {
+  min-height: 400px;
+}
+
+.modal-center {
+  text-align: center;
+}
