--- a/css/main.css
+++ b/css/main.css
@@ -6059,9 +6059,12 @@ pre {
   .hidden-print {
     display: none !important; } }
 
+body {
+  background-color: #ccc; }
+
 .main {
   position: relative;
-  margin-top: 100px; }
+  margin-top: 70px; }
 
 .search-row {
   background-color: #CEECF5;
@@ -6071,8 +6074,11 @@ pre {
   background-color: #F7F8E0;
   padding: 15px; }
 
-#solidityContent, #byteCodeContent {
-  min-height: 400px; }
+#solidityContent {
+  min-height: 225px; }
+
+#byteCodeContent {
+  min-height: 225px; }
 
 .modal-center {
   text-align: center; }
